--- a/index.html
+++ b/index.html
@@ -11,27 +11,15 @@
     body, html { margin: 0; padding: 0; height: 100dvh; }
     #map { width: 100%; height: 100%; }
 
-    .marker-wrapper {
-      width: 75px;
-      height: 75px;
-      position: relative;
-    }
-
     .custom-marker {
-      width: 100%;
-      height: 100%;
+      width: 100px;
+      height: 100px;
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
-    }
-
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
-
-    .bounce {
-      animation: bounce 0.6s infinite;
+      border: none;
+      border-radius: 0;
+      pointer-events: auto;
     }
 
     .mapboxgl-popup-content {
@@ -55,6 +43,15 @@
       font-size: 1em;
       text-align: center;
       cursor: pointer;
+    }
+
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-15px); }
+    }
+    
+    .bounce {
+      animation: bounce 0.6s infinite;
     }
 
     .popup-content:hover {
@@ -85,23 +82,50 @@
     bearing: 314
   });
 
+  map.on('load', () => {
+    const tiles = [
+      { id: 'tile_0_0', url: 'tile_0_0.jpeg', coords: [[126.83163, 37.57312], [126.83427, 37.57312], [126.83427, 37.57103], [126.83163, 37.57103]] },
+      { id: 'tile_0_1', url: 'tile_0_1.jpeg', coords: [[126.83427, 37.57312], [126.83691, 37.57312], [126.83691, 37.57103], [126.83427, 37.57103]] },
+      { id: 'tile_0_2', url: 'tile_0_2.jpeg', coords: [[126.83691, 37.57312], [126.83955, 37.57312], [126.83955, 37.57103], [126.83691, 37.57103]] },
+      { id: 'tile_1_0', url: 'tile_1_0.jpeg', coords: [[126.83163, 37.57103], [126.83427, 37.57103], [126.83427, 37.56893], [126.83163, 37.56893]] },
+      { id: 'tile_1_1', url: 'tile_1_1.jpeg', coords: [[126.83427, 37.57103], [126.83691, 37.57103], [126.83691, 37.56893], [126.83427, 37.56893]] },
+      { id: 'tile_1_2', url: 'tile_1_2.jpeg', coords: [[126.83691, 37.57103], [126.83955, 37.57103], [126.83955, 37.56893], [126.83691, 37.56893]] },
+      { id: 'tile_2_0', url: 'tile_2_0.jpeg', coords: [[126.83163, 37.56893], [126.83427, 37.56893], [126.83427, 37.56684], [126.83163, 37.56684]] },
+      { id: 'tile_2_1', url: 'tile_2_1.jpeg', coords: [[126.83427, 37.56893], [126.83691, 37.56893], [126.83691, 37.56684], [126.83427, 37.56684]] },
+      { id: 'tile_2_2', url: 'tile_2_2.jpeg', coords: [[126.83691, 37.56893], [126.83955, 37.56893], [126.83955, 37.56684], [126.83691, 37.56684]] }
+    ];
+
+    tiles.forEach(tile => {
+      map.addSource(tile.id, {
+        type: 'image',
+        url: tile.url,
+        coordinates: tile.coords
+      });
+      map.addLayer({
+        id: tile.id,
+        type: 'raster',
+        source: tile.id,
+        paint: { 'raster-opacity': 1 }
+      });
+    });
+  });
+
   const markers = [
-    { lng: 126.79009, lat: 37.50089, img: 'st1.png', title: '해봄정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
-    { lng: 126.79139, lat: 37.50200, img: 'on1.png', title: '식물문화센터' },
-    { lng: 126.78976, lat: 37.50240, img: 'gold1.png', title: '거인의 정원' },
-    { lng: 126.78835, lat: 37.50166, img: 'ct1.png', title: '판매온실' }
-  ];
+  { lng: 126.79009, lat: 37.50089, img: 'st1.png', title: '해봄정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
+  { lng: 126.79139, lat: 37.50200, img: 'on1.png', title: '식물문화센터' },
+  { lng: 126.78976, lat: 37.50240, img: 'gold1.png', title: '거인의 정원' },
+  { lng: 126.78835, lat: 37.50166, img: 'ct1.png', title: '판매온실' }
+];
 
   const markerElements = [];
 
   markers.forEach(m => {
-    const wrapper = document.createElement('div');
-    wrapper.className = 'marker-wrapper';
-
     const el = document.createElement('div');
     el.className = 'custom-marker';
     el.style.backgroundImage = `url(${m.img})`;
-    wrapper.appendChild(el);
+    el.style.width = '75px';
+    el.style.height = '75px';
+    el.style.display = 'none';
 
     const popupHTML = `
       <div class="popup-content" ${m.url ? `onclick=\"window.open('${m.url}', '_blank')\"` : ''}>
@@ -109,79 +133,86 @@
       </div>
     `;
 
-    const marker = new mapboxgl.Marker({ element: wrapper, anchor: 'center' })
+    const marker = new mapboxgl.Marker(el)
       .setLngLat([m.lng, m.lat])
       .setPopup(new mapboxgl.Popup({ offset: 25 }).setHTML(popupHTML))
       .addTo(map);
 
-    markerElements.push(el); // 내부 marker 저장 (애니메이션용)
+    markerElements.push(el);
   });
+
+  map.on('zoom', () => {
+    const zoom = map.getZoom();
+    markerElements.forEach(el => {
+      el.style.display = (zoom >= 16) ? 'block' : 'none';
+    });
+    if (userMarker) {
+      const userLngLat = userMarker.getLngLat();
+      showPopupIfNearby(userLngLat.lng, userLngLat.lat); //수정한 부분으로 불필요시 삭제
+    }
+    });
 
   let userMarker = null;
   let currentPopup = null;
 
-  function showPopupIfNearby(userLng, userLat) {
-    const zoom = map.getZoom();
-    let nearby = false;
+function showPopupIfNearby(userLng, userLat) {
+  const zoom = map.getZoom();
+  let nearby = false;
 
-    if (zoom < 16) {
-      if (currentPopup) {
-        currentPopup.remove();
-        currentPopup = null;
-      }
-      markerElements.forEach(el => el.classList.remove('bounce'));
-      return;
-    }
-
-    markers.forEach((m, i) => {
-      const distance = turf.distance([userLng, userLat], [m.lng, m.lat], { units: 'meters' });
-      const el = markerElements[i];
-
-      if (distance < 100) {
-        nearby = true;
-        el.classList.add('bounce');
-
-        if (!currentPopup || currentPopup._lngLat.lng !== m.lng) {
-          if (currentPopup) currentPopup.remove();
-          const popupHTML = `
-            <div class="popup-content" ${m.url ? `onclick=\"window.open('${m.url}', '_blank')\"` : ''}>
-              ${m.title}
-            </div>
-          `;
-          currentPopup = new mapboxgl.Popup()
-            .setLngLat([m.lng, m.lat])
-            .setHTML(popupHTML)
-            .addTo(map);
-        }
-      } else {
-        el.classList.remove('bounce');
-      }
-    });
-
-    if (!nearby && currentPopup) {
+  if (zoom < 16) {
+    if (currentPopup) {
       currentPopup.remove();
       currentPopup = null;
     }
+    markerElements.forEach(el => el.classList.remove('bounce')); // 모든 마커 bounce 제거
+    return;
   }
+
+  markers.forEach((m, i) => {
+    const distance = turf.distance([userLng, userLat], [m.lng, m.lat], { units: 'meters' });
+
+    const el = markerElements[i];
+    if (distance < 100) {
+      nearby = true;
+      el.classList.add('bounce');
+
+      if (!currentPopup || currentPopup._lngLat.lng !== m.lng) {
+        if (currentPopup) currentPopup.remove();
+        const popupHTML = `
+          <div class="popup-content" ${m.url ? `onclick="window.open('${m.url}', '_blank')"` : ''}>
+            ${m.title}
+          </div>
+        `;
+        currentPopup = new mapboxgl.Popup()
+          .setLngLat([m.lng, m.lat])
+          .setHTML(popupHTML)
+          .addTo(map);
+      }
+    } else {
+      el.classList.remove('bounce'); // 100m 밖이면 bounce 제거
+    }
+  });
+
+  if (!nearby && currentPopup) {
+    currentPopup.remove();
+    currentPopup = null;
+  }
+}
 
   navigator.geolocation.watchPosition((position) => {
     const { latitude, longitude } = position.coords;
-    map.easeTo({ center: [longitude, latitude], duration: 1000 });
-
+    map.easeTo({
+      center: [longitude, latitude],
+      duration: 1000
+    });
     if (!userMarker) {
-      const wrapper = document.createElement('div');
-      wrapper.className = 'marker-wrapper';
       const el = document.createElement('div');
       el.className = 'custom-marker';
       el.style.backgroundImage = 'url(dung1.gif)';
-      wrapper.appendChild(el);
-      userMarker = new mapboxgl.Marker({ element: wrapper, anchor: 'center' })
-        .setLngLat([longitude, latitude])
-        .addTo(map);
+      userMarker = new mapboxgl.Marker(el).setLngLat([longitude, latitude]).addTo(map);
     } else {
       userMarker.setLngLat([longitude, latitude]);
     }
-
     showPopupIfNearby(longitude, latitude);
   }, (error) => {
     console.error("Geolocation error:", error);
