--- a/index.html
+++ b/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
 <head>
   <meta charset="utf-8" />
   <title>botanicpark_seoul-haebom_festival</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet" />
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100svh; /* 모바일 브라우저 주소창 이슈 대응 */
-      overflow: hidden;
-    }
-    #map {
-      width: 100%;
-      height: 100%;
-    }
+    body, html { margin: 0; padding: 0; height: 100dvh; }
+    #map { width: 100%; height: 100%; }
+
     .custom-marker {
-      width: 75px;
-      height: 75px;
+      width: 100px;
+      height: 100px;
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
+      border: none;
+      border-radius: 0;
+      pointer-events: auto;
     }
+
     .mapboxgl-popup-content {
       background: transparent;
       box-shadow: none;
       padding: 0;
     }
+
+    .mapboxgl-popup-close-button {
+      display: none;
+    }
+
     .popup-content {
       font-family: "Noto Sans KR", sans-serif;
       background: white;
@@ -40,8 +42,21 @@
       font-weight: 600;
       font-size: 1em;
       text-align: center;
+      cursor: pointer;
     }
-    .popup-content:hover, .popup-content:active {
+
+    /* 바운스 애니메이션 제거됨
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-15px); }
+    }
+
+    .bounce {
+      animation: bounce 0.6s infinite;
+    }
+    */
+
+    .popup-content:hover {
       background: #f2f2f2;
     }
   </style>
@@ -65,13 +80,23 @@
       ]
     },
     center: [126.8355, 37.5700],
-    zoom: 16,
+    zoom: 15,
     bearing: 314
   });
 
-  const tiles = [/* 생략된 타일 목록 동일 */];
-
   map.on('load', () => {
+    const tiles = [
+      { id: 'tile_0_0', url: 'tile_0_0.jpeg', coords: [[126.83163, 37.57312], [126.83427, 37.57312], [126.83427, 37.57103], [126.83163, 37.57103]] },
+      { id: 'tile_0_1', url: 'tile_0_1.jpeg', coords: [[126.83427, 37.57312], [126.83691, 37.57312], [126.83691, 37.57103], [126.83427, 37.57103]] },
+      { id: 'tile_0_2', url: 'tile_0_2.jpeg', coords: [[126.83691, 37.57312], [126.83955, 37.57312], [126.83955, 37.57103], [126.83691, 37.57103]] },
+      { id: 'tile_1_0', url: 'tile_1_0.jpeg', coords: [[126.83163, 37.57103], [126.83427, 37.57103], [126.83427, 37.56893], [126.83163, 37.56893]] },
+      { id: 'tile_1_1', url: 'tile_1_1.jpeg', coords: [[126.83427, 37.57103], [126.83691, 37.57103], [126.83691, 37.56893], [126.83427, 37.56893]] },
+      { id: 'tile_1_2', url: 'tile_1_2.jpeg', coords: [[126.83691, 37.57103], [126.83955, 37.57103], [126.83955, 37.56893], [126.83691, 37.56893]] },
+      { id: 'tile_2_0', url: 'tile_2_0.jpeg', coords: [[126.83163, 37.56893], [126.83427, 37.56893], [126.83427, 37.56684], [126.83163, 37.56684]] },
+      { id: 'tile_2_1', url: 'tile_2_1.jpeg', coords: [[126.83427, 37.56893], [126.83691, 37.56893], [126.83691, 37.56684], [126.83427, 37.56684]] },
+      { id: 'tile_2_2', url: 'tile_2_2.jpeg', coords: [[126.83691, 37.56893], [126.83955, 37.56893], [126.83955, 37.56684], [126.83691, 37.56684]] }
+    ];
+
     tiles.forEach(tile => {
       map.addSource(tile.id, {
         type: 'image',
@@ -88,67 +113,108 @@
   });
 
   const markers = [
-    { lng: 126.83621, lat: 37.57017, img: 'st1.png', title: '해봄정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
-    { lng: 126.83499, lat: 37.57002, img: 'on1.png', title: '식물문화센터' },
-    { lng: 126.83443, lat: 37.57068, img: 'gold1.png', title: '거인의 정원' },
-    { lng: 126.83589, lat: 37.56965, img: 'ct1.png', title: '판매온실' }
-  ];
+  { lng: 126.83621, lat: 37.57017, img: 'st1.png', title: '해봄정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
+  { lng: 126.83499, lat: 37.57002, img: 'on1.png', title: '식물문화센터' },
+  { lng: 126.83443, lat: 37.57068, img: 'gold1.png', title: '거인의 정원' },
+  { lng: 126.83589, lat: 37.56965, img: 'ct1.png', title: '판매온실' }
+];
 
-  let userMarker = null;
-  let currentPopup = null;
+  const markerElements = [];
 
   markers.forEach(m => {
     const el = document.createElement('div');
     el.className = 'custom-marker';
     el.style.backgroundImage = `url(${m.img})`;
+    el.style.width = '75px';
+    el.style.height = '75px';
+    el.style.display = 'none';
 
-    const popupHTML = `<div class="popup-content" ${m.url ? `onclick=\"window.open('${m.url}', '_blank')\"` : ''}>${m.title}</div>`;
+    const popupHTML = `
+      <div class="popup-content" ${m.url ? `onclick=\"window.open('${m.url}', '_blank')\"` : ''}>
+        ${m.title}
+      </div>
+    `;
 
-    new mapboxgl.Marker(el)
+    const marker = new mapboxgl.Marker(el)
       .setLngLat([m.lng, m.lat])
       .setPopup(new mapboxgl.Popup({ offset: 25 }).setHTML(popupHTML))
       .addTo(map);
+
+    markerElements.push(el);
   });
+
+  map.on('zoom', () => {
+    const zoom = map.getZoom();
+    markerElements.forEach(el => {
+      el.style.display = (zoom >= 16) ? 'block' : 'none';
+    });
+    if (userMarker) {
+      const userLngLat = userMarker.getLngLat();
+      showPopupIfNearby(userLngLat.lng, userLngLat.lat);
+    }
+  });
+
+  let userMarker = null;
+  let currentPopup = null;
 
   function showPopupIfNearby(userLng, userLat) {
     const zoom = map.getZoom();
-    if (zoom < 16) return;
+    let nearby = false;
 
-    for (const m of markers) {
-      const distance = turf.distance([userLng, userLat], [m.lng, m.lat], { units: 'meters' });
-      if (distance < 20) {
-        if (!currentPopup || currentPopup.getLngLat().lng !== m.lng) {
-          if (currentPopup) currentPopup.remove();
-          const html = `<div class='popup-content' ${m.url ? `onclick=\"window.open('${m.url}', '_blank')\"` : ''}>${m.title}</div>`;
-          currentPopup = new mapboxgl.Popup()
-            .setLngLat([m.lng, m.lat])
-            .setHTML(html)
-            .addTo(map);
-        }
-        return;
+    if (zoom < 16) {
+      if (currentPopup) {
+        currentPopup.remove();
+        currentPopup = null;
       }
+      return; // 바운스 제거: bounce 관련 코드 삭제됨
     }
 
-    if (currentPopup) {
+    markers.forEach((m, i) => {
+      const distance = turf.distance([userLng, userLat], [m.lng, m.lat], { units: 'meters' });
+
+      const el = markerElements[i];
+      if (distance < 20) {
+        nearby = true;
+
+        if (!currentPopup || currentPopup._lngLat.lng !== m.lng) {
+          if (currentPopup) currentPopup.remove();
+          const popupHTML = `
+            <div class="popup-content" ${m.url ? `onclick="window.open('${m.url}', '_blank')"` : ''}>
+              ${m.title}
+            </div>
+          `;
+          currentPopup = new mapboxgl.Popup()
+            .setLngLat([m.lng, m.lat])
+            .setHTML(popupHTML)
+            .addTo(map);
+        }
+      }
+    });
+
+    if (!nearby && currentPopup) {
       currentPopup.remove();
       currentPopup = null;
     }
   }
 
-  navigator.geolocation.getCurrentPosition(pos => {
-    const { latitude, longitude } = pos.coords;
-    map.easeTo({ center: [longitude, latitude], duration: 1000 });
-    const el = document.createElement('div');
-    el.className = 'custom-marker';
-    el.style.backgroundImage = 'url(dung1.gif)';
-    userMarker = new mapboxgl.Marker(el).setLngLat([longitude, latitude]).addTo(map);
+  navigator.geolocation.watchPosition((position) => {
+    const { latitude, longitude } = position.coords;
+    map.easeTo({
+      center: [longitude, latitude],
+      duration: 1000
+    });
+    if (!userMarker) {
+      const el = document.createElement('div');
+      el.className = 'custom-marker';
+      el.style.backgroundImage = 'url(dung1.gif)';
+      userMarker = new mapboxgl.Marker(el).setLngLat([longitude, latitude]).addTo(map);
+    } else {
+      userMarker.setLngLat([longitude, latitude]);
+    }
     showPopupIfNearby(longitude, latitude);
-  }, err => {
-    alert("위치 정보를 가져올 수 없습니다. 위치 권한을 허용했는지 확인해주세요.");
-    console.error("Geolocation error:", err);
+  }, (error) => {
+    console.error("Geolocation error:", error);
   });
-
-  window.addEventListener('resize', () => map.resize());
 </script>
 </body>
 </html>
