--- a/index.html
+++ b/index.html
@@ -12,23 +12,28 @@
     #map { width: 100%; height: 100%; }
 
     .custom-marker {
-      width: 100px;
-      height: 100px;
+      width: 75px;
+      height: 75px;
+      background: none;
+      position: relative;
+      pointer-events: auto;
+    }
+
+    .marker-inner {
+      width: 100%;
+      height: 100%;
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
-      border: none;
-      border-radius: 0;
-      pointer-events: auto;
       transform-origin: bottom center;
       will-change: transform;
     }
-    
+
     @keyframes bounce {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-15px); }
     }
-    
+
     .bounce {
       animation: bounce 0.6s infinite;
     }
@@ -59,7 +64,6 @@
     .popup-content:hover {
       background: #f2f2f2;
     }
-
   </style>
 </head>
 <body>
@@ -114,21 +118,23 @@
   });
 
   const markers = [
-  { lng: 126.79009, lat: 37.50089, img: 'st1.png', title: '해봄정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
-  { lng: 126.79139, lat: 37.50200, img: 'on1.png', title: '식물문화센터' },
-  { lng: 126.78976, lat: 37.50240, img: 'gold1.png', title: '거인의 정원' },
-  { lng: 126.78835, lat: 37.50166, img: 'ct1.png', title: '판매온실' }
-];
+    { lng: 126.79009, lat: 37.50089, img: 'st1.png', title: '해봄정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
+    { lng: 126.79139, lat: 37.50200, img: 'on1.png', title: '식물문화센터' },
+    { lng: 126.78976, lat: 37.50240, img: 'gold1.png', title: '거인의 정원' },
+    { lng: 126.78835, lat: 37.50166, img: 'ct1.png', title: '판매온실' }
+  ];
 
   const markerElements = [];
 
   markers.forEach(m => {
     const el = document.createElement('div');
     el.className = 'custom-marker';
-    el.style.backgroundImage = `url(${m.img})`;
-    el.style.width = '75px';
-    el.style.height = '75px';
-    el.style.display = 'none';
+
+    const inner = document.createElement('div');
+    inner.className = 'marker-inner';
+    inner.style.backgroundImage = `url(${m.img})`;
+
+    el.appendChild(inner);
 
     const popupHTML = `
       <div class="popup-content" ${m.url ? `onclick="window.open('${m.url}', '_blank')"` : ''}>
@@ -136,18 +142,18 @@
       </div>
     `;
 
-    const marker = new mapboxgl.Marker(el)
+    new mapboxgl.Marker(el)
       .setLngLat([m.lng, m.lat])
       .setPopup(new mapboxgl.Popup({ offset: 25 }).setHTML(popupHTML))
       .addTo(map);
 
-    markerElements.push(el);
+    markerElements.push(inner);
   });
 
   map.on('zoom', () => {
     const zoom = map.getZoom();
     markerElements.forEach(el => {
-      el.style.display = (zoom >= 16) ? 'block' : 'none';
+      el.parentElement.style.display = (zoom >= 16) ? 'block' : 'none';
     });
     if (userMarker) {
       const userLngLat = userMarker.getLngLat();
@@ -161,7 +167,7 @@
   function showPopupIfNearby(userLng, userLat) {
     const zoom = map.getZoom();
     let nearby = false;
-  
+
     if (zoom < 16) {
       if (currentPopup) {
         currentPopup.remove();
@@ -170,18 +176,17 @@
       markerElements.forEach(el => el.classList.remove('bounce'));
       return;
     }
-  
+
     markers.forEach((m, i) => {
       const distance = turf.distance([userLng, userLat], [m.lng, m.lat], { units: 'meters' });
       const el = markerElements[i];
-  
+
       if (distance < 50) {
         nearby = true;
-  
-        // 바운스 클래스는 좌표 기준으로 적용
+
         markerElements.forEach(otherEl => otherEl.classList.remove('bounce'));
         el.classList.add('bounce');
-  
+
         if (!currentPopup || currentPopup._lngLat.lng !== m.lng) {
           if (currentPopup) currentPopup.remove();
           const popupHTML = `
@@ -196,7 +201,7 @@
         }
       }
     });
-  
+
     if (!nearby && currentPopup) {
       currentPopup.remove();
       currentPopup = null;
@@ -213,7 +218,12 @@
     if (!userMarker) {
       const el = document.createElement('div');
       el.className = 'custom-marker';
-      el.style.backgroundImage = 'url(dung1.gif)';
+
+      const inner = document.createElement('div');
+      inner.className = 'marker-inner';
+      inner.style.backgroundImage = 'url(dung1.gif)';
+      el.appendChild(inner);
+
       userMarker = new mapboxgl.Marker(el).setLngLat([longitude, latitude]).addTo(map);
     } else {
       userMarker.setLngLat([longitude, latitude]);
