--- a/index.html
+++ b/index.html
@@ -12,30 +12,14 @@
     #map { width: 100%; height: 100%; }
 
     .custom-marker {
-      width: 75px;
-      height: 75px;
-      background: none;
-      position: relative;
-      pointer-events: auto;
-    }
-
-    .marker-inner {
-      width: 100%;
-      height: 100%;
+      width: 100px;
+      height: 100px;
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
-      transform-origin: bottom center;
-      will-change: transform;
-    }
-
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-15px); }
-    }
-
-    .bounce {
-      animation: bounce 0.6s infinite;
+      border: none;
+      border-radius: 0;
+      pointer-events: auto;
     }
 
     .mapboxgl-popup-content {
@@ -60,6 +44,17 @@
       text-align: center;
       cursor: pointer;
     }
+
+    /* 바운스 애니메이션 제거됨
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-15px); }
+    }
+
+    .bounce {
+      animation: bounce 0.6s infinite;
+    }
+    */
 
     .popup-content:hover {
       background: #f2f2f2;
@@ -118,42 +113,40 @@
   });
 
   const markers = [
-    { lng: 126.79009, lat: 37.50089, img: 'st1.png', title: '해봄정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
-    { lng: 126.79139, lat: 37.50200, img: 'on1.png', title: '식물문화센터' },
-    { lng: 126.78976, lat: 37.50240, img: 'gold1.png', title: '거인의 정원' },
-    { lng: 126.78835, lat: 37.50166, img: 'ct1.png', title: '판매온실' }
-  ];
+  { lng: 126.79009, lat: 37.50089, img: 'st1.png', title: '해봄정원', url: 'https://botanicpark.seoul.go.kr/front/main.do' },
+  { lng: 126.79139, lat: 37.50200, img: 'on1.png', title: '식물문화센터' },
+  { lng: 126.78976, lat: 37.50240, img: 'gold1.png', title: '거인의 정원' },
+  { lng: 126.78835, lat: 37.50166, img: 'ct1.png', title: '판매온실' }
+];
 
   const markerElements = [];
 
   markers.forEach(m => {
     const el = document.createElement('div');
     el.className = 'custom-marker';
-
-    const inner = document.createElement('div');
-    inner.className = 'marker-inner';
-    inner.style.backgroundImage = `url(${m.img})`;
-
-    el.appendChild(inner);
+    el.style.backgroundImage = `url(${m.img})`;
+    el.style.width = '75px';
+    el.style.height = '75px';
+    el.style.display = 'none';
 
     const popupHTML = `
-      <div class="popup-content" ${m.url ? `onclick="window.open('${m.url}', '_blank')"` : ''}>
+      <div class="popup-content" ${m.url ? `onclick=\"window.open('${m.url}', '_blank')\"` : ''}>
         ${m.title}
       </div>
     `;
 
-    new mapboxgl.Marker(el, { offset: [0, -37.5] })
+    const marker = new mapboxgl.Marker(el)
       .setLngLat([m.lng, m.lat])
       .setPopup(new mapboxgl.Popup({ offset: 25 }).setHTML(popupHTML))
       .addTo(map);
 
-    markerElements.push(inner);
+    markerElements.push(el);
   });
 
   map.on('zoom', () => {
     const zoom = map.getZoom();
     markerElements.forEach(el => {
-      el.parentElement.style.display = (zoom >= 16) ? 'block' : 'none';
+      el.style.display = (zoom >= 16) ? 'block' : 'none';
     });
     if (userMarker) {
       const userLngLat = userMarker.getLngLat();
@@ -169,20 +162,19 @@
     let nearby = false;
 
     if (zoom < 16) {
-      if (currentPopup) currentPopup.remove();
-      currentPopup = null;
-      markerElements.forEach(el => el.classList.remove('bounce'));
-      return;
+      if (currentPopup) {
+        currentPopup.remove();
+        currentPopup = null;
+      }
+      return; // 바운스 제거: bounce 관련 코드 삭제됨
     }
 
     markers.forEach((m, i) => {
       const distance = turf.distance([userLng, userLat], [m.lng, m.lat], { units: 'meters' });
-      const el = markerElements[i];
 
-      if (distance < 50) {
+      const el = markerElements[i];
+      if (distance < 20) {
         nearby = true;
-        markerElements.forEach(otherEl => otherEl.classList.remove('bounce'));
-        el.classList.add('bounce');
 
         if (!currentPopup || currentPopup._lngLat.lng !== m.lng) {
           if (currentPopup) currentPopup.remove();
@@ -202,7 +194,6 @@
     if (!nearby && currentPopup) {
       currentPopup.remove();
       currentPopup = null;
-      markerElements.forEach(el => el.classList.remove('bounce'));
     }
   }
 
@@ -215,25 +206,14 @@
     if (!userMarker) {
       const el = document.createElement('div');
       el.className = 'custom-marker';
-
-      const inner = document.createElement('div');
-      inner.className = 'marker-inner';
-      inner.style.backgroundImage = 'url(dung1.gif)';
-      el.appendChild(inner);
-
-      userMarker = new mapboxgl.Marker(el, { offset: [0, -37.5] })
-        .setLngLat([longitude, latitude])
-        .addTo(map);
+      el.style.backgroundImage = 'url(dung1.gif)';
+      userMarker = new mapboxgl.Marker(el).setLngLat([longitude, latitude]).addTo(map);
     } else {
       userMarker.setLngLat([longitude, latitude]);
     }
     showPopupIfNearby(longitude, latitude);
   }, (error) => {
     console.error("Geolocation error:", error);
-  }, {
-    enableHighAccuracy: true,
-    maximumAge: 10000,
-    timeout: 10000
   });
 </script>
 </body>
