--- a/index.html
+++ b/index.html
@@ -75,44 +75,32 @@
     style: {
       version: 8,
       sources: {},
-      layers: [
-        {
-          id: 'background',
-          type: 'background',
-          paint: { 'background-color': '#448e7a' }
-        }
-      ]
+      layers: [{
+        id: 'background',
+        type: 'background',
+        paint: { 'background-color': '#448e7a' }
+      }]
     },
     center: [126.8355, 37.5700],
     zoom: 15,
     bearing: 314
   });
 
-  map.on('load', () => {
-    const tiles = [
-      { id: 'tile_0_0', url: 'tile_0_0.jpeg', coords: [[126.83163, 37.57312], [126.83427, 37.57312], [126.83427, 37.57103], [126.83163, 37.57103]] },
-      { id: 'tile_0_1', url: 'tile_0_1.jpeg', coords: [[126.83427, 37.57312], [126.83691, 37.57312], [126.83691, 37.57103], [126.83427, 37.57103]] },
-      { id: 'tile_0_2', url: 'tile_0_2.jpeg', coords: [[126.83691, 37.57312], [126.83955, 37.57312], [126.83955, 37.57103], [126.83691, 37.57103]] },
-      { id: 'tile_1_0', url: 'tile_1_0.jpeg', coords: [[126.83163, 37.57103], [126.83427, 37.57103], [126.83427, 37.56893], [126.83163, 37.56893]] },
-      { id: 'tile_1_1', url: 'tile_1_1.jpeg', coords: [[126.83427, 37.57103], [126.83691, 37.57103], [126.83691, 37.56893], [126.83427, 37.56893]] },
-      { id: 'tile_1_2', url: 'tile_1_2.jpeg', coords: [[126.83691, 37.57103], [126.83955, 37.57103], [126.83955, 37.56893], [126.83691, 37.56893]] },
-      { id: 'tile_2_0', url: 'tile_2_0.jpeg', coords: [[126.83163, 37.56893], [126.83427, 37.56893], [126.83427, 37.56684], [126.83163, 37.56684]] },
-      { id: 'tile_2_1', url: 'tile_2_1.jpeg', coords: [[126.83427, 37.56893], [126.83691, 37.56893], [126.83691, 37.56684], [126.83427, 37.56684]] },
-      { id: 'tile_2_2', url: 'tile_2_2.jpeg', coords: [[126.83691, 37.56893], [126.83955, 37.56893], [126.83955, 37.56684], [126.83691, 37.56684]] }
-    ];
+  // 사용자 인터랙션 여부 체크 변수
+  let isUserInteracting = false;
 
+  map.on('dragstart', () => isUserInteracting = true);
+  map.on('zoomstart', () => isUserInteracting = true);
+  map.on('touchstart', () => isUserInteracting = true);
+
+  map.on('dragend', () => setTimeout(() => isUserInteracting = false, 2000));
+  map.on('zoomend', () => setTimeout(() => isUserInteracting = false, 2000));
+
+  map.on('load', () => {
+    const tiles = [ /* 생략 - 기존 tiles 배열 동일 */ ];
     tiles.forEach(tile => {
-      map.addSource(tile.id, {
-        type: 'image',
-        url: tile.url,
-        coordinates: tile.coords
-      });
-      map.addLayer({
-        id: tile.id,
-        type: 'raster',
-        source: tile.id,
-        paint: { 'raster-opacity': 1 }
-      });
+      map.addSource(tile.id, { type: 'image', url: tile.url, coordinates: tile.coords });
+      map.addLayer({ id: tile.id, type: 'raster', source: tile.id, paint: { 'raster-opacity': 1 } });
     });
   });
 
@@ -124,6 +112,8 @@
   ];
 
   const markerElements = [];
+  let userMarker = null;
+  let currentPopup = null;
 
   markers.forEach(m => {
     const el = document.createElement('div');
@@ -132,7 +122,6 @@
     const inner = document.createElement('div');
     inner.className = 'marker-inner';
     inner.style.backgroundImage = `url(${m.img})`;
-
     el.appendChild(inner);
 
     const popupHTML = `
@@ -141,16 +130,18 @@
       </div>
     `;
 
+    const popup = new mapboxgl.Popup({ offset: [0, -50] }).setHTML(popupHTML);
+
+    el.addEventListener('click', () => popup.addTo(map).setLngLat([m.lng, m.lat]));
+    el.addEventListener('touchstart', () => popup.addTo(map).setLngLat([m.lng, m.lat]));
+
     new mapboxgl.Marker(el, { offset: [0, -37.5] })
       .setLngLat([m.lng, m.lat])
-      .setPopup(new mapboxgl.Popup({ offset: 25 }).setHTML(popupHTML))
+      .setPopup(popup)
       .addTo(map);
 
     markerElements.push({ el, inner, lng: m.lng, lat: m.lat });
   });
-
-  let userMarker = null;
-  let currentPopup = null;
 
   function showPopupIfNearby(userLng, userLat) {
     const zoom = map.getZoom();
@@ -170,9 +161,7 @@
 
       const distance = turf.distance([userLng, userLat], [m.lng, m.lat], { units: 'meters' });
 
-      if (distance < 100) {
-        m.inner.classList.add('bounce');
-      }
+      if (distance < 100) m.inner.classList.add('bounce');
 
       if (distance < 70) {
         nearby = true;
@@ -183,7 +172,7 @@
               ${m.title}
             </div>
           `;
-          currentPopup = new mapboxgl.Popup()
+          currentPopup = new mapboxgl.Popup({ offset: [0, -50] }) // 모바일 대응 오프셋
             .setLngLat([m.lng, m.lat])
             .setHTML(popupHTML)
             .addTo(map);
@@ -199,15 +188,14 @@
 
   navigator.geolocation.watchPosition((position) => {
     const { latitude, longitude } = position.coords;
-    map.easeTo({
-      center: [longitude, latitude],
-      duration: 1000
-    });
+
+    if (!isUserInteracting) {
+      map.easeTo({ center: [longitude, latitude], duration: 1000 });
+    }
 
     if (!userMarker) {
       const el = document.createElement('div');
       el.className = 'custom-marker';
-
       const inner = document.createElement('div');
       inner.className = 'marker-inner';
       inner.style.backgroundImage = 'url(dung1.gif)';
